# R-Type

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile.ubuntu  Doxyfile  Jenkinsfile  LICENSE.md  Makefile  README.md  conanfile.txt  create_github_release.sh  package-lock.json  rtype_rfc.md  upload_artifacts.sh
.github/workflows/: push_to_mirror.yml
client/: CMakeLists.txt
client/include/: Global.hpp  config.h
client/src/: Client.hpp  event-dispatcher-example.cpp  main.cpp  scene_management_example.cpp
client/src/GameModules/: NetworkGameModule.hpp
client/src/Modules/: NetworkGameModule.hpp
client/src/scenes/Game/: Components.hpp  Game.cpp  Game.hpp
client/src/scenes/Game/Events/: PlayerMovement.hpp
client/src/scenes/Level1/: Components.hpp  Level1.cpp  Level1.hpp
client/src/scenes/Level1/Component/: BeamBar.hpp
client/src/scenes/Level1/Events/: InputHandler.hpp  PacketHandler.hpp  PacketInformation.hpp  PacketInformations.hpp  PlayerMovement.cpp  PlayerMovement.hpp
client/src/scenes/Level1/Modules/: PacketHandlerSceneModule.cpp  PacketHandlerSceneModule.hpp
client/src/scenes/Level1/Systems/: BugsMovementSystem.hpp  MonsterKilledSystem.hpp  NewMonsterSystem.hpp  NewProjectileSystem.hpp  NewShipSystem.hpp  RemoveOutOfBoundProjectilesSystem.hpp  ShipMouvementSystem.hpp  ShipMovementSystem.hpp  UpdateBeamBarSystem.hpp
client/src/scenes/Level1/modules/: Level1Events.hpp
client/src/scenes/Lose/: Lose.cpp  Lose.hpp
client/src/scenes/WaitingRoom/: Components.hpp  WaitingRoom.cpp  WaitingRoom.hpp  WaitingRoomEvents.hpp
client/src/scenes/WaitingRoom/Modules/: PacketHandlerSceneModule.cpp  PacketHandlerSceneModule.hpp
client/src/scenes/WaitingRoom/modules/: WaitingRoomEvents.hpp
client/src/scenes/WaitingRoom/systems/: ExampleSystem.hpp
client/src/scenes/Win/: Win.cpp  Win.hpp
docs/: Doxyfile  SceneManager.drawio
documentation/docusaurus/: Dockerfile  README.md  docusaurus.config.js  package-lock.json  package.json
documentation/doxygen/: Doxyfile  generator
lib/: AScene.hpp  ASystem.hpp  BaseComponents.hpp  Entity.hpp  EventDispatcher.hpp  Events.hpp  Family.hpp  Foo.hpp  Game.hpp  IScene.hpp  ISceneManager.hpp  NetworkAgent.hpp  NetworkedScene.hpp  Registry.hpp  SceneManager.hpp  SparseSet.hpp  UDPPacket.hpp  View.hpp
lib/ECS/: Entity.hpp  EventDispatcher.hpp  Events.hpp  Family.hpp  Registry.hpp  SparseSet.hpp  View.hpp
lib/Engine/: AScene.hpp  Game.hpp  RestrictedGame.hpp  RestrictedSceneManager.hpp  SceneManager.hpp
lib/Network/: NetworkAgent.hpp  UDPPacket.hpp
lib/PremadeComponents/: Color.hpp  Hitbox.hpp  Projectile.hpp  Transform.hpp  Velocity.hpp
lib/Systems/: OnLeftClickSystem.hpp  ParalaxSystem.hpp  SysParalax.hpp
lib/Utils/: IntRect.hpp
lib/ecs/: Entity.hpp  EventDispatcher.hpp  Family.hpp  Registry.hpp  SparseSet.hpp  View.hpp
lib/engine/: AScene.hpp  Game.hpp  RestrictedGame.hpp  RestrictedSceneManager.hpp  SceneManager.hpp
lib/network/: NetworkAgent.hpp  Packet.hpp  UDPPacket.hpp
lib/scenes/: AScene.hpp  ISceneManager.hpp  SceneManager.hpp
orchera/: CMakeLists.txt
orchera/src/: main.cpp
orchera/src/Components/: Border.hpp  Bow.hpp  DamageProtection.hpp  Health.hpp  Monster.hpp  Player.hpp  Target.hpp  Weapon.hpp
orchera/src/scenes/Game/: Components.hpp  Game.cpp  Game.hpp
orchera/src/scenes/Game/Systems/: AttackSystem.hpp  BorderCollisionSystem.hpp  BowUseSystem.hpp  DamageProtectionSystem.hpp  DeathUpdateSystem.hpp  HealthRenderingSystem.hpp  MonsterUpdateSystem.hpp  PlayerShotSystem.hpp  PlayerUpdateSystem.hpp  RemoveOutOfBoundProjectilesSystem.hpp  WeaponUseSystem.hpp
orchera/src/scenes/HomeScreen/: HomeScreen.cpp  HomeScreen.hpp
profiles/: windows
scripts/: check_format.sh  check_tidy.sh  check_tidy_path.sh  comment_artifacts.sh  create_github_release.sh  install_conan.sh  install_conan_ci.sh  prepare_release_artifacts.sh  prepare_tidy.sh  upload_artifacts.sh
server/: CMakeLists.txt
server/include/: Global.hpp
server/src/: Server.hpp  main.cpp
server/src/GameModules/: NetworkGameModule.hpp
server/src/Modules/: NetworkGameModule.hpp
server/src/Room/: Room.hpp  RoomManager.cpp  RoomManager.hpp
server/src/Systems/: RemoveClientSystem.hpp
server/src/scenes/: UserInput.hpp
server/src/scenes/Level1/: Components.hpp  Level1.cpp  Level1.hpp
server/src/scenes/Level1/Events/: InputHandler.cpp  InputHandler.hpp  PacketHandler.cpp  PacketHandler.hpp  PacketInformation.hpp  PacketInformations.hpp  PlayerMovement.hpp
server/src/scenes/Level1/Modules/: PacketHandlerSceneModule.cpp  PacketHandlerSceneModule.hpp
server/src/scenes/Level1/Systems/: BugsMovementSystem.hpp  RemoveOutOfBoundProjectilesSystem.hpp  ShipMovedSystem.cpp  ShipMovedSystem.hpp  ShipMovementSystem.cpp  ShipMovementSystem.hpp  ShipShootedSystem.cpp  ShipShootedSystem.hpp  ShipShotSystem.cpp  ShipShotSystem.hpp
server/src/scenes/WaitingRoom/: Components.hpp  WaitingRoom.cpp  WaitingRoom.hpp
server/src/scenes/WaitingRoom/Modules/: PacketHandlerSceneModule.cpp  PacketHandlerSceneModule.hpp
server/src/scenes/WaitingRoom/Systems/: DrawMenuButtonsSystem.hpp
shared/: ANetworkGameModule.hpp  Components.hpp  Config.hpp  PacketTypes.hpp  Room.hpp
shared/NetworkModules/: ANetworkGameModule.hpp  ANetworkSceneModule.hpp  APacketHandlerSceneModule.hpp
(+105 files in other folders)
